# data-fun-02-automation

./: CITATION.cff  README.md  pyproject.toml  ruff.strict.toml  zensical.toml
data/processed/: HS_Extra_Duties.txt  HS_Grading.txt  HS_PLC.txt  HS_Parent_Contact_Log.txt  a_Extra_Duties.txt  a_Grading.txt  a_PLC.txt  a_Parent_Contact_Log.txt  a_cat.txt  a_fish.txt  case_01.txt  case_02.txt  case_03.txt  case_dog.txt  case_favorite_cat.txt  case_favorite_fish.txt  case_quarter_1.txt  case_quarter_2.txt  case_quarter_3.txt  case_quarter_4.txt  z_favorite_dog.txt  z_z_favorite_cat.txt  z_z_favorite_dog.txt  z_z_favorite_fish.txt
docs/: glossary.md  index.md  project-instructions.md  your-files.md
docs/module/: branching.md  index.md  repetition.md
src/datafun/: app_case.py  app_sum-randow.py  app_sum-randow_new.py
tests/: test_app_case.py
